test/errors/parsing/returnEmptyAndValue.1.good
returnEmptyAndValue.chpl:1: In function 'foo':
returnEmptyAndValue.chpl:2: error: Invalid mix of 'return' statements
returnEmptyAndValue.chpl:2: note: this statement returns something
returnEmptyAndValue.chpl:3: note: this statement does not return anything
